--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_18sdp"
-                android:text="@string/reset_password"
+                android:text="@string/sign_reset_password"
                 android:alpha="0.9"
                 android:textSize="@dimen/_18sdp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -39,18 +39,18 @@
                 android:layout_marginStart="@dimen/_4sdp"
                 android:layout_marginTop="@dimen/_12sdp"
                 android:alpha="0.8"
-                android:text="@string/sign_in_email_is_empty"
+                android:text="@string/sign_error_email_is_empty"
                 android:textSize="@dimen/_10sdp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvResetPassword" />
 
-            <com.leebeebeom.closetnote.ui.view.OutlinedTextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/emailLayout"
-                style="@style/myOutlineEditText"
+                style="@style/myOutlinedEditTextLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_4sdp"
-                android:hint="@string/sign_in_email"
+                android:hint="@string/sign_email"
                 app:startIconDrawable="@drawable/icon_email"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -62,17 +62,16 @@
                     android:layout_height="@dimen/_40sdp"
                     android:inputType="textEmailAddress"
                     android:text="@={model.emailLive}" />
-            </com.leebeebeom.closetnote.ui.view.OutlinedTextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <com.leebeebeom.closetnote.ui.view.CustomButton
-                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            <com.google.android.material.button.MaterialButton
+                style="@style/myOutlineButton"
                 app:strokeColor="@android:color/transparent"
                 android:layout_width="wrap_content"
-                android:layout_height="@dimen/_36sdp"
+                android:layout_height="?myNormalButtonHeight"
                 android:layout_marginTop="@dimen/_2sdp"
-                android:fontFamily="@font/ballet_harmony"
                 android:onClick="@{() -> TextUtils.isEmpty(model.emailLive.trim) ? resetPasswordFragment.setEmailEmptyError() : resetPasswordFragment.sendPasswordResetEmail()}"
-                android:text="@string/reset_password_next"
+                android:text="@string/sign_next"
                 android:textColor="?colorPrimary"
                 app:backgroundTint="?myColorControl"
                 app:layout_constraintEnd_toEndOf="parent"
