--- a/app/src/main/res/layout/fragment_sign_in_include_or.xml
+++ b/app/src/main/res/layout/fragment_sign_in_include_or.xml
@@ -22,7 +22,7 @@
         android:id="@+id/tvOr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sign_in_or"
+        android:text="@string/sign_or"
         android:textSize="@dimen/_10sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/orDivider2"
