--- a/app/src/main/res/layout/item_vh_include_check_box.xml
+++ b/app/src/main/res/layout/item_vh_include_check_box.xml
@@ -10,7 +10,8 @@
             type="boolean" />
     </data>
 
-    <com.leebeebeom.closetnote.ui.view.CustomCheckBox
+    <com.google.android.material.checkbox.MaterialCheckBox
+        style="@style/myCheckBox"
         android:id="@+id/cb"
         android:layout_width="@dimen/_20sdp"
         android:layout_height="@dimen/_20sdp"
