--- a/app/src/main/res/layout/fragment_send_reset_password_email.xml
+++ b/app/src/main/res/layout/fragment_send_reset_password_email.xml
@@ -21,22 +21,22 @@
                 android:layout_height="wrap_content"
                 android:alpha="0.9"
                 android:layout_marginTop="@dimen/_44sdp"
-                android:text="@string/send_reset_password_email_please_check_email"
+                android:text="@string/sign_sent_reset_password_email"
                 android:textSize="@dimen/_11sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <com.leebeebeom.closetnote.ui.view.CustomButton
-                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/_36sdp"
-                android:onClick="@{() -> fragment.openMail()}"
-                android:text="@string/send_reset_password_email_lets_check"
-                android:textColor="?colorPrimary"
-                app:strokeColor="@android:color/transparent"
-                app:backgroundTint="?myColorControl"
-                app:layout_constraintEnd_toEndOf="@id/tvSendEmail"
-                app:layout_constraintTop_toBottomOf="@id/tvSendEmail" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <com.google.android.material.button.MaterialButton
+            style="@style/myOutlineButton"
+            android:layout_width="wrap_content"
+            android:layout_height="?myNormalButtonHeight"
+            android:onClick="@{() -> fragment.openMail()}"
+            android:text="@string/sign_lets_check"
+            android:textColor="?colorPrimary"
+            app:backgroundTint="?myColorControl"
+            app:layout_constraintEnd_toEndOf="@id/tvSendEmail"
+            app:layout_constraintTop_toBottomOf="@id/tvSendEmail"
+            app:strokeColor="@android:color/transparent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
