--- a/app/src/main/res/layout/fragment_setting_include_account.xml
+++ b/app/src/main/res/layout/fragment_setting_include_account.xml
@@ -8,23 +8,28 @@
         <variable
             name="model"
             type="com.leebeebeom.closetnote.ui.setting.SettingViewModel" />
+
+        <variable
+            name="fragment"
+            type="com.leebeebeom.closetnote.ui.setting.SettingFragment" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.leebeebeom.closetnote.ui.view.SettingFragmentSubTextView
+        <com.google.android.material.textview.MaterialTextView
+            style="@style/myFragmentSubTextView"
             android:id="@+id/tvAccount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_12sdp"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:text="@string/settings_account"
+            android:text="@string/setting_account"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.leebeebeom.closetnote.ui.view.CustomCardView
+        <com.google.android.material.card.MaterialCardView
+            style="@style/myCardView"
+            android:onClick="@{() -> fragment.navigateAccountFragment()}"
             android:id="@+id/cardViewAccount"
             android:layout_width="0dp"
             android:layout_height="@dimen/_48sdp"
@@ -79,7 +84,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/tvNickname"
                     tools:text="leebeebeom@google.com" />
 
-                <com.leebeebeom.closetnote.ui.view.ArrowIcon
+                <com.leebeebeom.closetnote.ui.view.icon.ArrowIcon
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/_8sdp"
@@ -88,6 +93,6 @@
                     app:layout_constraintTop_toTopOf="parent"
                     tools:src="@drawable/icon_arrow_forward" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </com.leebeebeom.closetnote.ui.view.CustomCardView>
+        </com.google.android.material.card.MaterialCardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
