--- a/app/src/main/res/layout/fragment_setting_include_sign_out.xml
+++ b/app/src/main/res/layout/fragment_setting_include_sign_out.xml
@@ -20,37 +20,37 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.leebeebeom.closetnote.ui.view.CustomButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btnSignOut"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            style="@style/myOutlineButton"
             android:layout_width="0dp"
-            android:layout_height="@dimen/_48sdp"
+            android:layout_height="?mySignButtonHeight"
             android:layout_marginHorizontal="@dimen/_8sdp"
-            android:onClick="@{() -> model.nicknameLive.equals(@string/toast_sign_in_anonymously_success) ? fragment.navigateAnonymouslySignOutDialog() : fragment.signOut()}"
-            android:text="@string/settings_sign_out"
+            android:onClick="@{() -> model.emailLive.equals(@string/setting_anonymously) ? fragment.navigateAnonymouslySignOutDialog() : fragment.signOut()}"
+            android:text="@string/setting_sign_out"
             android:textColor="?colorError"
             android:textSize="@dimen/_12sdp"
             app:backgroundTint="?colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:strokeColor="?myColorControl" />
+            app:strokeColor="@android:color/transparent" />
 
-        <com.leebeebeom.closetnote.ui.view.CustomButton
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        <com.google.android.material.button.MaterialButton
+            style="@style/myOutlineButton"
             android:layout_width="0dp"
-            android:layout_height="@dimen/_48sdp"
+            android:layout_height="?mySignButtonHeight"
             android:layout_marginHorizontal="@dimen/_8sdp"
             android:onClick="@{() -> fragment.navigateAnonymouslySignUpFragment()}"
             android:text="@string/setting_switch_to_member"
             android:textColor="?myColorControl"
             android:textSize="@dimen/_12sdp"
-            android:visibility="@{model.nicknameLive.equals(@string/toast_sign_in_anonymously_success) ? View.VISIBLE : View.GONE}"
+            android:visibility="@{model.emailLive.equals(@string/setting_anonymously) ? View.VISIBLE : View.GONE}"
             app:backgroundTint="?colorPrimary"
             app:layout_constraintBottom_toTopOf="@id/btnSignOut"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:strokeColor="?myColorControl"
+            app:strokeColor="@android:color/transparent"
             tools:visibility="visible" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
