--- a/app/src/main/res/layout/fragment_size_edit_text_no_suffix.xml
+++ b/app/src/main/res/layout/fragment_size_edit_text_no_suffix.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -16,27 +15,22 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/layout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-        android:layout_width="0dp"
+        style="@style/myOutlinedEditTextLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/_4sdp"
         android:layout_weight="1"
         android:hint="@{hint}"
-        android:theme="@style/myOutlineEditText"
-        app:errorTextAppearance="@style/myTextSize8sdp"
-        app:hintTextAppearance="@style/myTextSize8sdp"
-        app:shapeAppearance="@style/myEditTextCorner"
         tools:ignore="ObsoleteLayoutParam">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <com.leebeebeom.closetnote.ui.view.CustomEditText
             android:id="@+id/et"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_34sdp"
+            android:layout_height="@dimen/_40sdp"
             android:imeOptions="actionNext"
             android:inputType="numberDecimal"
             android:text="@={text}"
-            android:textSize="@dimen/_10sdp"
-            tools:text="@string/include_option_1" />
+            tools:text="@string/size_option_1" />
     </com.google.android.material.textfield.TextInputLayout>
 
 </layout>
