--- a/app/src/main/res/layout/fragment_size_include_etc.xml
+++ b/app/src/main/res/layout/fragment_size_include_etc.xml
@@ -21,7 +21,7 @@
             <include
                 android:id="@+id/option1"
                 layout="@layout/fragment_size_edit_text_no_suffix"
-                app:hint="@{@string/include_option_1}"
+                app:hint="@{@string/size_option_1}"
                 app:text="@{model.sizeLive.firstInfo}" />
 
             <include
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="0dp"
                 android:layout_weight="1"
-                app:hint="@{@string/include_option_2}"
+                app:hint="@{@string/size_option_2}"
                 app:text="@{model.sizeLive.secondInfo}" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -42,7 +42,7 @@
             <include
                 android:id="@+id/option3"
                 layout="@layout/fragment_size_edit_text_no_suffix"
-                app:hint="@{@string/include_option_3}"
+                app:hint="@{@string/size_option_3}"
                 app:text="@{model.sizeLive.thirdInfo}" />
 
             <include
@@ -52,7 +52,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="0dp"
                 android:layout_weight="1"
-                app:hint="@{@string/include_option_4}"
+                app:hint="@{@string/size_option_4}"
                 app:text="@{model.sizeLive.fourthInfo}" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -64,7 +64,7 @@
             <include
                 android:id="@+id/option5"
                 layout="@layout/fragment_size_edit_text_no_suffix"
-                app:hint="@{@string/include_option_5}"
+                app:hint="@{@string/size_option_5}"
                 app:text="@{model.sizeLive.fifthInfo}" />
 
             <include
@@ -74,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="0dp"
                 android:layout_weight="1"
-                app:hint="@{@string/include_option_6}"
+                app:hint="@{@string/size_option_6}"
                 app:text="@{model.sizeLive.sixthInfo}" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
