--- a/app/src/main/res/layout/fragment_list_recycler_view_folder.xml
+++ b/app/src/main/res/layout/fragment_list_recycler_view_folder.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -31,23 +30,16 @@
             android:layout_marginEnd="@dimen/_4sdp"
             android:alpha="0.8"
             android:onClick="@{() -> model.changeFolderToggleState()}"
-            toggle="@{model.folderTogglePreferenceLive}"
+            folderToggle="@{model.folderTogglePreferenceLive}"
             tools:src="@drawable/icon_triangle_down" />
 
-        <androidx.recyclerview.widget.RecyclerView
+        <com.leebeebeom.closetnote.ui.view.recyclerview.FolderRecyclerViewGrid
+            style="@style/myRecyclerView"
             android:id="@+id/rv"
             android:visibility="@{model.folderTogglePreferenceLive ? View.VISIBLE : View.GONE}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clipToPadding="false"
-            android:nestedScrollingEnabled="false"
-            android:overScrollMode="never"
             android:paddingHorizontal="@dimen/_8sdp"
-            app:onTouchListener="@{(v, event) -> listFragment.folderDragSelect.onRecyclerViewTouch(v, event)}"
-            app:adapter="@{listFragment.folderAdapter}"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:spanCount="4"
-            tools:itemCount="4"
             tools:listitem="@layout/item_vh_folder_grid" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 
